3 files modified, 1 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
   events scheduled by date and time So that I can review upcoming event fixtures
   and identify any concerns easily.
 </p>
+<img style="width: 600px; height: auto; padding: 0px; display: block;" src="https://variety.com/wp-content/uploads/2017/05/tv-schedule-template-monday1.png?" alt="" data-lazy-loaded="true">
 <h4>Task:</h4>
 <p>
   Using the example data from the API endpoint:
@@ -28,5 +29,9 @@
   <li>
     <a href="https://www.radiotimes.com/tv/tv-listings/">Radio Times</a>
   </li>
+  <li>
+  <a href="https://dribbble.com/tags/tv_guide">Dribbble</a>
+</li>
+
 </ul>
 <events></events>
